--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=mysql
-DB_ROOT_PASSWORD=pass1234
-DB_DATABASE=php-playground
-DB_USERNAME=playground-user
-DB_PASSWORD=playground-pass1234
+DB_HOST= http://188.166.24.55/
+DB_ROOT_PASSWORD=RzCJH4PnOjMHYQer
+DB_DATABASE=hamilton-7-hiking-no-team
+DB_USERNAME=hiking-no-team
+DB_PASSWORD=RzCJH4PnOjMHYQer
