--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
             - './dbdata:/var/lib/mysql'
             - './scripts/init.sql:/docker-entrypoint-initdb.d/1.sql'
         environment:
-            - MYSQL_ROOT_PASSWORD=pass1234
-            - MYSQL_DATABASE=php-playground
-            - MYSQL_USER=playground-user
-            - MYSQL_PASSWORD=playground-pass1234
+            - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
+            - MYSQL_DATABASE=${DB_DATABASE}
+            - MYSQL_USER=${DB_USERNAME}
+            - MYSQL_PASSWORD=${DB_PASSWORD}
         ports:
             - '3002:3306'
 
@@ -25,8 +25,13 @@ services:
             - '3000:80'
 
     php-fpm:
-        build: phpdocker/php-fpm
+        build: phpdocker/php-fpm 
         working_dir: /application
+        environment:
+            - PHP_FPM_CLEAR_ENV=no
+        env_file:
+            - .env
+
         volumes:
             - './src:/application'
             - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.1/fpm/conf.d/99-overrides.ini'
