db connection and User Model created3

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DB_HOST= http://188.166.24.55/
-DB_ROOT_PASSWORD=RzCJH4PnOjMHYQer
-DB_DATABASE=hamilton-7-hiking-no-team
-DB_USERNAME=hiking-no-team
-DB_PASSWORD=RzCJH4PnOjMHYQer
+DB_HOST=188.166.24.55;
+DB_DATABASE=hamilton-7-hiking-no-team;
+DB_USERNAME=hiking-no-team;
+DB_PASSWORD=RzCJH4PnOjMHYQer;
