--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         environment:
             - PHP_FPM_CLEAR_ENV=no
         env_file:
-            - ./src/.env
+            - .env
         volumes:
             - './src:/application'
             - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.1/fpm/conf.d/99-overrides.ini'
